--- a/src/pages/group/group.html
+++ b/src/pages/group/group.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar color='primary'>
+    <ion-title>Flight Group</ion-title>
   </ion-navbar>
 </ion-header>
 
