--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color='primary'>
     <ion-title>
-      About
+      Profile
     </ion-title>
   </ion-navbar>
 </ion-header>
