--- a/src/pages/group/group.html
+++ b/src/pages/group/group.html
@@ -4,14 +4,16 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+  <ion-list>
+    <button ion-item *ngFor="let group of groupList| async" (click)="goToDetail(group)">
+         <ion-thumbnail item-start>
+          <img src="assets/{{group.dest}}.png">
+        </ion-thumbnail>
+        <h2 ion-text color='secondary'>{{group.name}}</h2>
+        <h2 ion-text color='secondary'>{{group.dataTime}}</h2>
+        <span ion-text color='secondary'>Need of People : {{group.people}}</span>
+
+    </button>
+  </ion-list>
 </ion-content>
