--- a/src/pages/group/group.html
+++ b/src/pages/group/group.html
@@ -11,8 +11,8 @@
           <img src="assets/{{group.dest}}.png">
         </ion-thumbnail>
         <h2 ion-text color='secondary'>{{group.name}}</h2>
-        <h2 ion-text color='secondary'>{{group.dataTime}}</h2>
         <span ion-text color='secondary'>Need of People : {{group.people}}</span>
+        <p ion-text color='secondary' item-end>{{group.dataTime}}</p>
 
     </button>
   </ion-list>
