--- a/src/pages/chat/chatroom/chatroom.html
+++ b/src/pages/chat/chatroom/chatroom.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar color="secondary">
+    <ion-navbar color="primary">
         <ion-title>{{chat.name}}</ion-title>
     </ion-navbar>
 </ion-header>
