--- a/src/pages/chat/chatroom/chatroom.html
+++ b/src/pages/chat/chatroom/chatroom.html
@@ -23,12 +23,14 @@
     </div>
 </ion-content>
 <ion-footer>
-    <ion-toolbar class="messages-page-footer" position="bottom" color="secondary">
-        <ion-input type="text" placeholder="Type a message" class="message-editor" [(ngModel)]='newMessage'></ion-input>
-        <ion-buttons end>
-            <button ion-button class="message-editor-button" (click)="sendMessage()">
-                Send
-            </button>
-        </ion-buttons>
-    </ion-toolbar>
+    <form (submit)="sendMessage()">
+        <ion-toolbar class="messages-page-footer" position="bottom" color="secondary">
+            <ion-input type="text" placeholder="Type a message" class="message-editor" [(ngModel)]='newMessage' name='newMessage'></ion-input>
+            <ion-buttons end>
+                <button ion-button class="message-editor-button">
+                    Send
+                </button>
+            </ion-buttons>
+        </ion-toolbar>
+    </form>
 </ion-footer>
