--- a/src/pages/chat/chatroom/chatroom.html
+++ b/src/pages/chat/chatroom/chatroom.html
@@ -27,7 +27,7 @@
         <ion-toolbar class="messages-page-footer" position="bottom" color="secondary">
             <ion-input type="text" placeholder="Type a message" class="message-editor" [(ngModel)]='newMessage' name='newMessage'></ion-input>
             <ion-buttons end>
-                <button ion-button class="message-editor-button">
+                <button ion-button class="message-editor-button" type="submit">
                     Send
                 </button>
             </ion-buttons>
