--- a/src/pages/group/detail/detail.html
+++ b/src/pages/group/detail/detail.html
@@ -47,3 +47,8 @@
         </ion-item>
     </ion-list>
 </ion-content>
+<ion-footer>
+  <ion-toolbar color="secondary" (click)='joinUs()'>
+        <div style="color:#fff;text-align:center">Join Us</div>
+  </ion-toolbar>
+</ion-footer>
