--- a/src/pages/group/group.html
+++ b/src/pages/group/group.html
@@ -11,7 +11,7 @@
           <img src="assets/{{group.dest}}.png">
         </ion-thumbnail>
         <h2 ion-text color='secondary'>{{group.name}}</h2>
-        <span ion-text color='secondary'>Need of People : {{group.people}}</span>
+        <span ion-text color='secondary'>People : {{group.people_need}} / {{group.people}}</span>
         <p ion-text color='secondary' item-end>{{group.dataTime}}</p>
 
     </button>
