--- a/src/pages/group/detail/detail.html
+++ b/src/pages/group/detail/detail.html
@@ -49,6 +49,6 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar color="secondary" (click)='joinUs()'>
-        <div style="color:#fff;text-align:center">Join Us</div>
+        <div style="color:#fff;text-align:center;font-size:2rem;">Join Us</div>
   </ion-toolbar>
 </ion-footer>
