--- a/src/pages/group/search/search.html
+++ b/src/pages/group/search/search.html
@@ -50,6 +50,6 @@
 </ion-content>
 <ion-footer>
     <ion-toolbar color="secondary" (click)='search()'>
-        <div style="color:#fff;text-align:center">Search</div>
+        <div style="color:#fff;text-align:center;font-size:2rem">Search</div>
     </ion-toolbar>
 </ion-footer>
