--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,5 +7,20 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-item>
+        <p ion-text color='secondary'>Name</p>
+        <span item-end ion-text color='secondary'>{{user.displayName}}</span>
+    </ion-item>
+    <ion-item>
+        <p ion-text color='secondary'>Email</p>
+        <span item-end ion-text color='secondary'>{{user.email}}</span>
+    </ion-item>
+    <ion-item>
+        <p ion-text color='secondary'>Phone</p>
+        <span item-end ion-text color='secondary'>9201 9865</span>
+    </ion-item>
+    <ion-item>
+        <p ion-text color='secondary'>Gender</p>
+        <span item-end ion-text color='secondary'>M</span>
+    </ion-item>
 </ion-content>
