ui creategroup finished

--- a/src/pages/group/create-group/group-create-detail/group-create-detail.html
+++ b/src/pages/group/create-group/group-create-detail/group-create-detail.html
@@ -31,15 +31,15 @@
       </ion-textarea>
     </ion-item>
 
-    <ion-item-divider>Preferences</ion-item-divider>
+    <ion-item-divider class="divider">Preferences</ion-item-divider>
 
     <ion-item>
-      <ion-label>Number of people</ion-label>
+      <ion-label color='secondary'>Number of people</ion-label>
       <ion-input placeholder="Less than {{flight.available_seat}}"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label>Gender</ion-label>
+      <ion-label color='secondary'>Gender</ion-label>
       <ion-select>
         <ion-option>Any</ion-option>
         <ion-option>Female</ion-option>
@@ -47,13 +47,13 @@
       </ion-select>
     </ion-item>
 
-    <ion-item-divider>Age bracket</ion-item-divider>
+    <ion-item-divider class="divider">Age bracket</ion-item-divider>
     <ion-item>
-      <ion-label>Minimum</ion-label>
+      <ion-label color='secondary'>Minimum</ion-label>
       <ion-input type="number"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Maximum</ion-label>
+      <ion-label color='secondary'>Maximum</ion-label>
       <ion-input type="number"></ion-input>
     </ion-item>
   </ion-list>
