--- a/src/pages/group/group.html
+++ b/src/pages/group/group.html
@@ -22,7 +22,7 @@
     <ion-list>
         <button ion-item *ngFor="let group of groupList| async" (click)="goToDetail(group)">
          <ion-thumbnail item-start>
-          <img src="assets/{{group.dest}}.png">
+          <img src="assets/{{group.randPhoto}}.png">
         </ion-thumbnail>
         <h2 ion-text color='secondary'>{{group.name}}</h2>
         <span ion-text color='secondary'>People : {{group.people_need}} / {{group.people}}</span>
