--- a/src/pages/group/group.html
+++ b/src/pages/group/group.html
@@ -26,7 +26,7 @@
         </ion-thumbnail>
         <h2 ion-text color='secondary'>{{group.name}}</h2>
         <span ion-text color='secondary'>People : {{group.people_need}} / {{group.people}}</span>
-        <p ion-text color='secondary' item-end>{{group.flight.fit_date}}</p>
+        <p ion-text color='secondary' item-end>{{group.flight.sch_arr_dateTime}}</p>
     </button>
     </ion-list>
 </ion-content>
