--- a/src/pages/group/detail/detail.html
+++ b/src/pages/group/detail/detail.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-    <img  style="width:100%" src="assets/{{group.dest}}.png">
+    <img  style="width:100%" src="assets/{{group.randPhoto}}.png">
     <ion-list>
         <ion-item-divider class="divider">Introduction</ion-item-divider>
         <ion-item>
