--- a/src/pages/group/group.html
+++ b/src/pages/group/group.html
@@ -24,11 +24,13 @@
          <ion-thumbnail item-start>
           <img src="assets/{{group.randPhoto}}.png">
         </ion-thumbnail>
+        <h2 ion-text color='secondary'>{{group.flight.leg_dest_apt}}</h2>
         <h2 ion-text color='secondary'>{{group.name}}</h2>
         <p ion-text color='secondary'>Estimated : $ {{group.price}}</p>
         <span ion-text color='secondary'>People : {{group.people_need}} / {{group.people}}</span>
-        <p ion-text color='secondary' item-end><span item-end>{{group.flight.leg_dest_apt}}</span>{{group.flight.sch_arr_dateTime}}</p>
-	
+        <p ion-text color='secondary'>Flight DateTime : {{group.flight.sch_arr_dateTime}}</p>
+        <p ion-text color='secondary' item-end>$ {{group.price}}</p>
+
     </button>
     </ion-list>
 </ion-content>
